--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/app/node_modules
-/node_backend/node_modules
+node_modules
 /files
 /testing_files
 /.pnp
 .pnp.js
-/python-backend/.venv
-/python-backend/__pycache__
+.venv
+.env
+__pycache__
 # testing
 /coverage
 /video_demo
+.vscode
 # production
 /build
 
@@ -21,7 +22,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.vscode
 
 npm-debug.log*
 yarn-debug.log*
