--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,5 +1,27 @@
 fastapi==0.110.1
-numpy==1.26.3
 scipy==1.13.0
 statsmodels==0.14.1
 uvicorn==0.29.0
+annotated-types==0.7.0
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.55.3
+kiwisolver==1.4.8
+matplotlib==3.10.0
+numpy==1.26.3
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+psycopg==3.2.3
+psycopg-binary==3.2.3
+psycopg-pool==3.2.4
+psycopg2==2.9.10
+pydantic==2.10.4
+pydantic_core==2.27.2
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+six==1.17.0
+typing_extensions==4.12.2
+tzdata==2024.2
