--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ __pycache__
 .env.development.local
 .env.test.local
 .env.production.local
-
+test
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
