--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-annotation": "^3.1.0",
     "js-cookie": "^3.0.5",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
