--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.7",
     "chartjs-plugin-annotation": "^3.1.0",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "motion": "^12.4.10",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
