--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.7",
     "chartjs-plugin-annotation": "^3.1.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "motion": "^12.4.10",
